--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "dependencies": {
     "babel": "4.6.1",
     "bootstrap": "3.3.2",
+    "deprecated": "0.0.1",
     "eventemitter3": "0.1.6",
     "express": "4.12.0",
     "flux": "2.0.1",
     "front-matter": "0.2.2",
     "jade": "1.9.2",
     "lodash": "3.3.1",
+    "orchestrator": "^0.3.7",
     "react": "0.12.2",
-    "superagent": "0.21.0"
+    "superagent": "0.21.0",
+    "vinyl-fs": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer-loader": "^1.1.0",
